--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 ssh2 = "0.9.4"
 csv = "1.3.0"
 serde = { version = "1.0.202", features = ["derive"] }
+serde_json = "1.0.117"
 thiserror = "1.0"
